# cmake-solved

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  c_cpp_properties.json  cmake_install.cmake  hello_world.cpp
